2005-03-31  ------ omnetpp-3.1 released ------

2005-01-17  Andras Varga

	* combobox.tcl updated to version 2.3 which also works on Mac OS/X 
	[suggested by Michael Tuexen]

2004-12-29  ------ omnetpp-3.0 released ------

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-08  Andras Varga

        * widgets.tcl: updated Tcl/Tk version check

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-31  Andras Varga

        * Plove internals rewritten from scratch.
