@@ -1,3 +1,8 @@
+2005-05-01  Andras Varga
+
+	* cnullmessageprot.cc: eliminated warnings when compiled on 64-bit
+	platforms [reported by Kendy Kutzner]
+
 2005-03-31  ------ omnetpp-3.1 released ------
 
 2005-01-10  Andras Varga
